--- a/deck-of-cards/index.html
+++ b/deck-of-cards/index.html
@@ -6,12 +6,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Deck of Cards</title>
 </head>
-<body>
+<body style="background-color: green;">
     <div class="container">
         <div class="my-4">
-            <form action="" class="d-flex justify-content-center">
+            <form action="" class="d-flex justify-content-center" id="card-button">
                 <button class="btn btn-primary">Gimme A Card</button>
             </form>
+        </div>
+        <div class="deck-container d-flex justify-content-center">
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.slim.js" integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
